[package]
name = "fsight-datacache"
version = "0.1.0"
edition = "2021"
authors = ["Nikolay Ishiev <ishiev@primetver.ru>"]
description = "Forsight BI Server caching proxy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3",  features = ["tls"] }
warp-reverse-proxy = "0.4"
config  = "0.11"
chrono  = { version = "0.4", features = ["serde"] }
bincode = "1.3"
blake3  = "1.2"
log     = "^0"
sled    = { version = "0.34", features = ["compression"] }
serde   = { version = "1.0", features = ["derive"] }
pretty_env_logger = "0.4"